fix overflow on body

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -8,6 +8,7 @@ body {
   font-weight: 400;
   // font-family: "Clear Sans", sans-serif;
   font-family: "Inter UI", sans-serif;
+  overflow-x: hidden;
 }
 
 html,
