--- a/static/css/main.css
+++ b/static/css/main.css
@@ -410,7 +410,8 @@ body {
   /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Inter UI", sans-serif; }
+  font-family: "Inter UI", sans-serif;
+  overflow-x: hidden; }
 
 html,
 body,
